--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,17 +1,37 @@
 asgiref==3.4.1
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.9
 colorama==0.4.4
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==36.0.1
 defusedxml==0.7.1
 Django==3.2.9
 django-cors-headers==3.11.0
+django-templated-mail==1.1.1
 djangorestframework==3.12.4
+djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
 httpie==2.6.0
 idna==3.3
+itypes==1.2.0
+Jinja2==3.0.3
+MarkupSafe==2.1.0
+oauthlib==3.2.0
+pycparser==2.21
 Pygments==2.10.0
+PyJWT==2.3.0
 PySocks==1.7.1
+python-dotenv==0.19.2
+python3-openid==3.2.0
 pytz==2021.3
 requests==2.26.0
+requests-oauthlib==1.3.1
 requests-toolbelt==0.9.1
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.2.0
 sqlparse==0.4.2
+uritemplate==4.1.1
 urllib3==1.26.7
